# NoetIA

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  restaurar_db.py  setup.py
.streamlit/: config.toml
app/: Home.py
app/pages/: Calendario.py  Proyectos.py  Tareas.py  chatbot.py
assets/: NoetIA-ERD.html
noetai-eda/: Base_de_datos_NoetIA.csv  NoetIA_TAD_Final.csv  dataset_procesado_checkpoint.csv  eda_noetai.ipynb
noetai-eda/src/noetia/models/: modelo_Proyecto.joblib  modelo_areas.joblib  modelo_intencion.joblib  modelo_temas.joblib
scripts/: 00_check_env.py  01_init_db.py  02_check_db.py  03_setup_dummy_data.py  access_token.py  end_to_end.py  test_image.py  test_text.py  test_transcripcion.py  text_calendar.py
sql/: noetia.db  schema.sql
src/noetia/: arquitectura.py  chatbot_render.py  config.py  db_utils.py  get_db_connection.py  google_sync.py  image_note_render.py  image_processor.py  llm_model.py  model_area.py  model_intencion.py  model_prioridad.py  model_proyecto.py  model_tema.py  pipeline.py  sidebar.py  sqlite.py  streamlit_ui.py  text_correction.py  text_processor.py  voice_note_render.py  voice_processor.py
src/noetia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/noetia/db/: __init__.py  sqlite.py
src/noetia/models/: modelo_area.joblib  modelo_prioridad.joblib  modelo_tema.joblib
