[project]
name = "noetia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "openai>=2.21.0",
    "openai-chat>=0.0.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
    "whisper>=1.1.10",
    "xgboost>=3.2.0",
]
